# goit-pyweb-hw-10

./: pyproject.toml
quotes/quotes/: settings.py
quotes/quotes_app/templates/quotes_app/: base.html
quotes/users/: urls.py  views.py
quotes/users/templates/users/: signin.html  signout.html
quotes/utils/: config.ini
